--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
+<!--           <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li> -->
           <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
-          <li><a href="blog.html"> Digital Media </a></li>
-          <li class="dropdown"><a href="#"><span>  Strategy  </span> <i class="bi bi-chevron-down"></i></a>
+<!--           <li><a href="blog.html"> Digital Media </a></li> -->
+          <li class="dropdown"><a href="#"><span>  Digital Marketing  </span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#"> Branding </a></li>
               <li class="dropdown"><a href="#"><span>Search Engine Optimization</span> <i class="bi bi-chevron-right"></i></a>
@@ -960,7 +960,7 @@ Snapchat. Pinterest. HubSpot. Marketo.  Engage. MailChimp. SharpSpring. Keap. Se
             Commercial Area   <br>
               Cavallary ground Lahore <br>
               Pakistan <br><br>
-              <strong>Phone:</strong> +1 2345678 9394 <br>
+              <strong>Phone:</strong> +92 03265130601 <br>
               <strong>Email:</strong> smilepk145@gmail.com<br>
             </p>
 
