--- a/index.html
+++ b/index.html
@@ -531,74 +531,74 @@ We take on projects of all sizes. Our fast and affordable development services w
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h2>Pricing</h2>
-          <p>Check our Pricing</p>
+          <h2> Multi-platform consultancy and development  </h2>
+          <p> Our diverse team of expert designers and developers familiar with providing software product development services across multiple languages and frameworks . </p>
         </header>
 
         <div class="row gy-4" data-aos="fade-left">
 
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="100">
             <div class="box">
-              <h3 style="color: #07d5c0;"> Basic Plan</h3>
-              <div class="price"><sup>$</sup>0<span> / mo</span></div>
+              <h3 style="color: #07d5c0;"> creative support </h3>
+              <div class="price"><sup> </sup> <span> / </span></div>
               <img src="assets/img/business-deal.gif" class="img-fluid" alt="">
               <ul>
-                <li> counseling </li>
-                <li> sitemap </li>
-                <!-- <li>  analytics </li> -->
-                <li class="na"> Prototype </li>
-                <li class="na"> design </li>
+                <li> Online Scheduling </li>
+                <li> Product Strategy  </li>
+                <!-- <li> Road map analysis </li> -->
+                <li class="na">Idea's Prototyping </li>
+                <li class="na"> Architect designing </li>
               </ul>
-              <a href="#" class="btn-buy">Buy Now</a>
+<!--               <a href="#" class="btn-buy"> Order Now </a> -->
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="200">
             <div class="box">
-              <span class="featured">Featured</span>
+              <span class="featured"> Innovative & Agile </span>
               <h3 style="color: #65c600;">Starter Plan</h3>
-              <div class="price"><sup>$</sup> 50 <span> / mo</span></div>
+              <div class="price"><sup> </sup>  <span> / </span></div>
               <img src="assets/img/Finance.gif" class="img-fluid" alt="">
               <ul>
-                <li> portfolio </li>
-                <li> Landing page </li>
-                <li> wordpress website </li>
-                <li> Social management   </li>
-                <li class="na"> theme development</li>
+                <li>  Business solutions  </li>
+                <li> Research planning   </li>
+                <li> Product design </li>
+                <li> Projects management  </li>
+                <li class="na">CRM management  </li>
               </ul>
-              <a href="#" class="btn-buy">Buy Now</a>
+<!--               <a href="#" class="btn-buy"> Order Now</a> -->
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="300">
             <div class="box">
-              <h3 style="color: #ff901c;">Business Plan</h3>
-              <div class="price"><sup>$</sup>300<span> / mo</span></div>
+              <h3 style="color: #ff901c;"> Integrated Marketing </h3>
+              <div class="price"><sup></sup><span> / </span></div>
               <img src="assets/img/On-Demand.gif" class="img-fluid" alt="">
               <ul>
-                <li> custom website </li>
+                <li> Business Plans </li>
                 <li> Expert UI/UX design </li>
-                <li> Microservices </li>
+                <li> Microservices  </li>
                 <li> Cloud integration  </li>
                 <!-- <li> Security testing </li> -->
               </ul>
-              <a href="#" class="btn-buy">Buy Now</a>
+<!--               <a href="#" class="btn-buy">Buy Now</a> -->
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="400">
             <div class="box">
-              <h3 style="color: #ff0071;">Ultimate Plan</h3>
-              <div class="price"><sup>$</sup>1000<span> / mo</span></div>
+              <h3 style="color: #ff0071;"> Software Development </h3>
+              <div class="price"><sup></sup><span> / </span></div>
               <img src="assets/img/retail.gif" class="img-fluid" alt="">
               <ul>
                 <li> CRM Development </li>
-                <li> Theme development </li>
+                <li> Web app Development </li>
                 <li> Marketplace Development </li>
-                <!-- <li> Small Games </li> -->
+                <!-- <li> Games Development  </li> -->
                 <li> Character Animation </li>
               </ul>
-              <a href="#" class="btn-buy">Buy Now</a>
+<!--               <a href="#" class="btn-buy">Buy Now</a> -->
             </div>
           </div>
 
