--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Smile's Tech Website and Mobile App development services help design, build, and evolve web-based software</title>
-  <meta content="" name="digital product agency, developer website ">
+  <title>Smile's Digital Products Design and development solutions,Human Creativity and development services </title>
+  <meta content="Digital Product Development,Software Product Development,Custom Software Development,Mobile App Development ,Web Application Development ,
+    Product Design and Development, UI/UX design services,Full-stack development,MVP (Minimum Viable Product) development,Quality assurance and testing" name="digital product development agency, developer website ">
 
   <meta content="" name="website design E-commerce Business web-based project Online Digital marketing">
 
@@ -546,8 +547,8 @@ We take on projects of all sizes. Our fast and affordable development services w
                 <li> Online Scheduling </li>
                 <li> Product Strategy  </li>
                 <!-- <li> Road map analysis </li> -->
-                <li class="na">Idea's Prototyping </li>
-                <li class="na"> Architect designing </li>
+                <li >Idea's Prototyping </li>
+                <li > Architect designing </li>
               </ul>
 <!--               <a href="#" class="btn-buy"> Order Now </a> -->
             </div>
@@ -555,16 +556,16 @@ We take on projects of all sizes. Our fast and affordable development services w
 
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="200">
             <div class="box">
-              <span class="featured"> Innovative & Agile </span>
-              <h3 style="color: #65c600;">Starter Plan</h3>
-              <div class="price"><sup> </sup>  <span> / </span></div>
+              <span class="featured"> Innovative Agile </span>
+              <h3 style="color: #65c600;">Starter Plan </h3>
+<!--               <div class="price"><sup> </sup>  <span> / </span></div> -->
               <img src="assets/img/Finance.gif" class="img-fluid" alt="">
               <ul>
                 <li>  Business solutions  </li>
                 <li> Research planning   </li>
                 <li> Product design </li>
                 <li> Projects management  </li>
-                <li class="na">CRM management  </li>
+                <li>  CRM management  </li>
               </ul>
 <!--               <a href="#" class="btn-buy"> Order Now</a> -->
             </div>
@@ -573,14 +574,14 @@ We take on projects of all sizes. Our fast and affordable development services w
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="300">
             <div class="box">
               <h3 style="color: #ff901c;"> Integrated Marketing </h3>
-              <div class="price"><sup></sup><span> / </span></div>
+<!--               <div class="price"><sup></sup><span> / </span></div> -->
               <img src="assets/img/On-Demand.gif" class="img-fluid" alt="">
               <ul>
                 <li> Business Plans </li>
                 <li> Expert UI/UX design </li>
                 <li> Microservices  </li>
                 <li> Cloud integration  </li>
-                <!-- <li> Security testing </li> -->
+                <li> Security testing </li>
               </ul>
 <!--               <a href="#" class="btn-buy">Buy Now</a> -->
             </div>
@@ -589,14 +590,14 @@ We take on projects of all sizes. Our fast and affordable development services w
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="400">
             <div class="box">
               <h3 style="color: #ff0071;"> Software Development </h3>
-              <div class="price"><sup></sup><span> / </span></div>
+<!--               <div class="price"><sup></sup><span> / </span></div> -->
               <img src="assets/img/retail.gif" class="img-fluid" alt="">
               <ul>
                 <li> CRM Development </li>
                 <li> Web app Development </li>
                 <li> Marketplace Development </li>
-                <!-- <li> Games Development  </li> -->
-                <li> Character Animation </li>
+                <li> Games Development  </li>
+                <li> Character Animations </li>
               </ul>
 <!--               <a href="#" class="btn-buy">Buy Now</a> -->
             </div>
@@ -834,7 +835,7 @@ Snapchat. Pinterest. HubSpot. Marketo.  Engage. MailChimp. SharpSpring. Keap. Se
                 <div class="info-box">
                   <i class="bi bi-telephone"></i>
                   <h3>Call Us</h3>
-                  <p>+92 1234 56789000<br> 1 6678 254445 41</p>
+                  <p>+92 03265130601  <br> </p>
                 </div>
               </div>
               <div class="col-md-6">
