--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <!--           <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li> -->
           <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
 <!--           <li><a href="blog.html"> Digital Media </a></li> -->
-          <li class="dropdown"><a href="#"><span>  Digital Marketing  </span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>  Digital Media  </span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#"> Branding </a></li>
               <li class="dropdown"><a href="#"><span>Search Engine Optimization</span> <i class="bi bi-chevron-right"></i></a>
@@ -459,7 +459,7 @@ We take on projects of all sizes. Our fast and affordable development services w
 
         <header class="section-header">
           <h2>Services</h2>
-          <p> Services we offer </p>
+          <p> We Offer </p>
         </header>
 
         <div class="row gy-4">
@@ -541,7 +541,7 @@ We take on projects of all sizes. Our fast and affordable development services w
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="100">
             <div class="box">
               <h3 style="color: #07d5c0;"> creative support </h3>
-              <div class="price"><sup> </sup> <span> / </span></div>
+<!--               <div class="price"><sup> </sup> <span> / </span></div> -->
               <img src="assets/img/business-deal.gif" class="img-fluid" alt="">
               <ul>
                 <li> Online Scheduling </li>
@@ -561,10 +561,10 @@ We take on projects of all sizes. Our fast and affordable development services w
 <!--               <div class="price"><sup> </sup>  <span> / </span></div> -->
               <img src="assets/img/Finance.gif" class="img-fluid" alt="">
               <ul>
-                <li>  Business solutions  </li>
+                <li> Business solutions  </li>
                 <li> Research planning   </li>
-                <li> Product design </li>
-                <li> Projects management  </li>
+                <li> Product designing </li>
+                <li> Process management  </li>
                 <li>  CRM management  </li>
               </ul>
 <!--               <a href="#" class="btn-buy"> Order Now</a> -->
