--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta content="" name="website design E-commerce Business web-based project Online Digital marketing">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/favicon-32.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
