--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@ Snapchat. Pinterest. HubSpot. Marketo.  Engage. MailChimp. SharpSpring. Keap. Se
           </div>
 
           <div class="col-lg-6">
-            <form action="forms/contact.php" method="post" class="php-email-form">
+            <form action="https://formspree.io/smilepk145@gmail.com" method="POST"">
               <div class="row gy-4">
 
                 <div class="col-md-6">
