--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
   <!--  Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+ <!--  Main CSS File -->
+ 
 
   
 </head>
@@ -855,9 +857,40 @@ Snapchat. Pinterest. HubSpot. Marketo.  Engage. MailChimp. SharpSpring. Keap. Se
             </div>
 
           </div>
+          <script>
+  const form = document.getElementById('my-form');
+  const status = document.getElementById('my-form-status');
+
+  form.addEventListener('submit', async (event) => {
+    event.preventDefault();
+
+    try {
+      const response = await fetch(form.action, {
+        method: 'POST',
+        body: new FormData(form),
+        headers: {
+          Accept: 'application/json',
+        },
+      });
+
+      if (response.ok) {
+        status.textContent = 'Thanks for your submission!';
+        form.reset();
+      } else {
+        const data = await response.json();
+        const errors = Object.values(data.errors).map((error) => error.message);
+        status.textContent = `Oops! ${errors.join(', ')}`;
+      }
+    } catch (error) {
+      console.error('Error submitting form:', error);
+      status.textContent = 'Oops! There was a problem submitting your form.';
+    }
+  });
+</script>
+
 
           <div class="col-lg-6">
-            <form action="https://formspree.io/smilepk145@gmail.com" method="POST"">
+            <form id="my-form" action="https://formspree.io/f/mbjvegpa" method="POST">
               <div class="row gy-4">
 
                 <div class="col-md-6">
@@ -880,8 +913,10 @@ Snapchat. Pinterest. HubSpot. Marketo.  Engage. MailChimp. SharpSpring. Keap. Se
                   <div class="loading">Loading</div>
                   <div class="error-message"></div>
                   <div class="sent-message">Your message has been sent. Thank you!</div>
-
+                  <p id="my-form-status"> </p>
+                  
                   <button type="submit">Send Message</button>
+                  <p id="my-form-status"></p>
                 </div>
 
               </div>
@@ -892,7 +927,7 @@ Snapchat. Pinterest. HubSpot. Marketo.  Engage. MailChimp. SharpSpring. Keap. Se
         </div>
 
       </div>
-
+      
     </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
