--- a/index.html
+++ b/index.html
@@ -85,21 +85,21 @@
 <!--           <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li> -->
           <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
 <!--           <li><a href="blog.html"> Digital Media </a></li> -->
-          <li class="dropdown"><a href="#"><span>  Digital Media  </span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>  Digital Marketing  </span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#"> Branding </a></li>
-              <li class="dropdown"><a href="#"><span>Search Engine Optimization</span> <i class="bi bi-chevron-right"></i></a>
+              <li class="dropdown"><a href="#"><span> Marketing automation </span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
-                  <li><a href="#"> On-Page SEO </a></li>
-                  <li><a href="#"> Off-Page SEO  </a></li>
-                  <li><a href="#"> Content SEO  </a></li>
-                  <li><a href="#">Technical SEO</a></li>
-                  <li><a href="#"> Local SEO. </a></li>
+                  <li><a href="#"> (SEO)Search Engine Optimization </a></li>
+                  <li><a href="#"> (PPC) advertising  </a></li>
+                  <li><a href="#"> Social Media Marketing  </a></li>
+                  <li><a href="#"> Content Marketing </a></li>
+                  <li><a href="#"> Email Marketing </a></li>
                 </ul>
               </li>
-              <li><a href="#">Digital Marketing </a></li>
-              <li><a href="#"> Planning and Consultancy </a></li>
-              <li><a href="#">  Business Analytics </a></li>
+              <li><a href="#"> Conversion rate optimization </a></li>
+              <li><a href="#"> Analytics and reporting  </a></li>
+              <li><a href="#"> Management and Consultancy  </a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
