--- a/index.html
+++ b/index.html
@@ -924,13 +924,9 @@ Snapchat. Pinterest. HubSpot. Marketo.  Engage. MailChimp. SharpSpring. Keap. Se
 <!--                   <button type="submit">Send Message</button> -->
                   <button id="my-form-button">Submit</button>
 
-  
-<p
- 
-id="my-form-status"></p>
 
 </form>
-                  <p id="my-form-status"></p>
+                  <p id="my-form-status"> </p>
                 </div>
 
               </div>
@@ -957,7 +953,8 @@ id="my-form-status"></p>
             <p> Join to get businesses revenue goals and discounts with our weekly insights </p>
           </div>
           <div class="col-lg-6">
-            <form action="" method="post">
+<!--             <form action="" method="post"> -->
+            <form action="https://formspree.io/f/xjvqdyze" method="POST"> 
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
           </div>
