--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-8 hero-img" data-aos="zoom-out" data-aos-delay="200">
-          <img src="assets/img/hero.gif" class="img-fluid" alt="gif">
+        <div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
+          <img src="assets/img/about.gif" class="img-fluid" alt="gif">
         </div>
       </div>
     </div>
