--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </div>
         </div>
         <div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
-          <img src="assets/img/about.gif" class="img-fluid" alt="gif">
+          <img src="assets/img/hero-img.gif" class="img-fluid" alt="gif">
         </div>
       </div>
     </div>
