--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Smile's Digital Products Design and development solutions,Human Creativity and development services </title>
+  <title>Smile's Digital Products Design and development solutions,Web Application Development Mobile App Development Agile Software Development
+Digital Transformation Services Human Creativity and development services </title>
   <meta content="Digital Product Development,Software Product Development,Custom Software Development,Mobile App Development ,Web Application Development ,
     Product Design and Development, UI/UX design services,Full-stack development,MVP (Minimum Viable Product) development,Quality assurance and testing" name="digital product development agency, developer website ">
 
